--- a/references.bib
+++ b/references.bib
@@ -73,7 +73,8 @@
     title = {Biostrings: Efficient manipulation of biological strings},
     author = {H. Pagès and P. Aboyoun and R. Gentleman and S. DebRoy},
     year = {2018},
-    note = {R package version 2.48.0},
+    note = {R package version 2.49.0},
+    doi = {10.18129/B9.bioc.Biostrings}
   }
 
 @Manual{R-gdb,
@@ -402,7 +403,7 @@ identifiers},
     title = {AnnotationHub: Client to access AnnotationHub resources},
     author = {Martin Morgan},
     year = {2017},
-    note = {R package version 2.10.1},
+    note = {R package version 2.13.1},
 }
 
 @INPROCEEDINGS{Dorok2015-ts,
@@ -1039,12 +1040,10 @@ identifiers},
   journal     = {Nature},
   volume      =  518,
   number      =  7539,
-  pages       = {317--330},
+  note       = {NCBI GEO accession numbers GSM433167 https://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSM433167 and GPL18952 https://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GPL18952},
   month       =  feb,
   year        =  2015,
   url         = {http://dx.doi.org/10.1038/nature14248},
-  language    = {en},
-  issn        = {0028-0836, 1476-4687},
   pmid        = {25693563},
   doi         = {10.1038/nature14248},
   pmc         = {PMC4530010}
@@ -1058,3 +1057,15 @@ identifiers},
     note = {R package version 0.7.4},
     url = {https://CRAN.R-project.org/package=dplyr},
   }
+  
+@misc{plyranges_zenodo,
+  author       = {Stuart Lee and
+                  Michael Lawrence and
+                  Dianne Cook},
+  title        = {{plyranges: a grammar of genomic data 
+                   transformation}},
+  month        = oct,
+  year         = 2018,
+  doi          = {10.5281/zenodo.1469841},
+  url          = {https://doi.org/10.5281/zenodo.1469841}
+}
