--- a/references.bib
+++ b/references.bib
@@ -86,15 +86,35 @@ identifiers},
   }
 
 @Article{R-ggbio,
-    title = {ggbio: an R package for extending the grammar of graphics for genomic data},
-    author = {Tengfei Yin and Dianne Cook and Michael Lawrence},
-    journal = {Genome Biology},
-    volume = {13},
-    number = {8},
-    pages = {R77},
-    year = {2012},
-    publisher = {BioMed Central Ltd},
-  }
+   title    = "ggbio: an {R} package for extending the grammar of graphics for
+               genomic data",
+   author   = "Yin, Tengfei and Cook, Dianne and Lawrence, Michael",
+   abstract = "We introduce ggbio, a new methodology to visualize and explore
+               genomics annotations and high-throughput data. The plots provide
+               detailed views of genomic regions, summary views of sequence
+               alignments and splicing patterns, and genome-wide overviews with
+               karyogram, circular and grand linear layouts. The methods
+               leverage the statistical functionality available in R, the
+               grammar of graphics and the data handling capabilities of the
+               Bioconductor project. The plots are specified within a modular
+               framework that enables users to construct plots in a systematic
+               way, and are generated directly from Bioconductor data
+               structures. The ggbio R package is available at
+               http://www.bioconductor.org/packages/2.11/bioc/html/ggbio.html.",
+   journal  = "Genome Biol.",
+   volume   =  13,
+   number   =  8,
+   pages    = "R77",
+   month    =  aug,
+   year     =  2012,
+   url      = "http://dx.doi.org/10.1186/gb-2012-13-8-r77",
+   language = "en",
+   issn     = "1465-6906",
+   pmid     = "22937822",
+   doi      = "10.1186/gb-2012-13-8-r77",
+   pmc      = "PMC4053745"
+}
+ 
 
 @Book{R-knitr,
   title = {Dynamic Documents with {R} and knitr},
@@ -404,6 +424,7 @@ identifiers},
     author = {Martin Morgan},
     year = {2017},
     note = {R package version 2.13.1},
+    doi = {10.18129/B9.bioc.AnnotationHub}
 }
 
 @INPROCEEDINGS{Dorok2015-ts,
@@ -1040,7 +1061,7 @@ identifiers},
   journal     = {Nature},
   volume      =  518,
   number      =  7539,
-  note       = {NCBI GEO accession numbers GSM433167 https://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSM433167 and GPL18952 https://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GPL18952},
+  note       = {NCBI GEO accession numbers GSM433167 \url{https://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSM433167} and GPL18952 \url{https://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GPL18952}},
   month       =  feb,
   year        =  2015,
   url         = {http://dx.doi.org/10.1038/nature14248},
@@ -1058,7 +1079,7 @@ identifiers},
     url = {https://CRAN.R-project.org/package=dplyr},
   }
   
-@misc{plyranges_zenodo,
+@misc{R-plyranges-z,
   author       = {Stuart Lee and
                   Michael Lawrence and
                   Dianne Cook},
@@ -1068,4 +1089,17 @@ identifiers},
   year         = 2018,
   doi          = {10.5281/zenodo.1469841},
   url          = {https://doi.org/10.5281/zenodo.1469841}
+}
+
+@article{ncbi-geo,
+author = {Barrett, Tanya and Wilhite, Stephen E. and Ledoux, Pierre and Evangelista, Carlos and Kim, Irene F. and Tomashevsky, Maxim and Marshall, Kimberly A. and Phillippy, Katherine H. and Sherman, Patti M. and Holko, Michelle and Yefanov, Andrey and Lee, Hyeseung and Zhang, Naigong and Robertson, Cynthia L. and Serova, Nadezhda and Davis, Sean and Soboleva, Alexandra},
+title = {NCBI GEO: archive for functional genomics data sets—update},
+journal = {Nucleic Acids Research},
+volume = {41},
+number = {D1},
+pages = {D991-D995},
+year = {2013},
+doi = {10.1093/nar/gks1193},
+URL = {http://dx.doi.org/10.1093/nar/gks1193},
+eprint = {/oup/backfile/content_public/journal/nar/41/d1/10.1093/nar/gks1193/2/gks1193.pdf}
 }
